# MyOTP

./: .gitignore  README.md
app/: README.md
app/data_recorder/: READMD.md  README.md  data_recorder.py  static_data.py  task.py
app/data_recorder/config/: clickhouse.py  docker.py  simnow.md
app/quote-engine/: config.py
app/quote-engine/mpmc_quote_engine/: run_quote_engine.py
app/quote-engine/spmc_quote_engine/: run_service.py
app/quote_engine/: config.py  run_quote_engine.py  static_data.py
core/: README.md
core/data_recorder/: README.md
core/data_recorder/cpp/app_ctp_future_data_recorder/: CMakeLists.txt  app_ctp_future_data_recorder.cpp  ctp_quote_api.cpp  ctp_quote_api.h
core/last_data/: README.md
core/last_data/cpp/app_ctp_future_last_data/: CMakeLists.txt  app_ctp_future_last_data.cpp  ctp_quote_api.cpp  ctp_quote_api.h
core/last_data/python/: app_ctp_future_last_data.pyd
core/quote_engine/: README.md
core/quote_engine/app_ctp_future_quote_engine/: CMakeLists.txt  app_ctp_future_quote_engine.cpp  create_folder.h
core/quote_engine/app_ctp_future_quote_engine/disruptor/: wait_strategy.h
core/quote_engine/app_ctp_future_quote_engine/yjj/include/yijinjing/journal/: Frame.h  Journal.h  Page.h  PageHeader.h  PageSocketStruct.h  PageUtil.h
core/quote_engine/app_ctp_future_quote_engine/yjj/include/yijinjing/paged/: PageServiceTask.h
core/quote_engine/app_ctp_future_quote_engine/yjj/journal/: JournalWriter.cpp
core/quote_engine/app_ctp_future_quote_engine/yjj/paged/: PageServiceTask.cpp
core/quote_engine/app_ctp_future_quote_engine/yjj/provider/: ClientPageProvider.cpp
core/quote_engine/app_reader/: app_reader.cpp  quote.h
core/quote_engine/app_yijinjing_service/: CMakeLists.txt  app_yijinjing_service.cpp  logger.h
core/quote_engine/app_yijinjing_service/python/: test.py
core/quote_engine/app_yijinjing_service/yjj/journal/: JournalReader.cpp  Page.cpp
core/quote_engine/mpmc-mpsc/app_reader/: CMakeLists.txt  app_reader.cpp
core/static_data/: README.md
core/static_data/win32/app_ctp_spot_static_data/: CMakeLists.txt  app_ctp_spot_static_data.cpp  app_ctp_spot_static_data.sln  app_ctp_spot_static_data.vcxproj  app_ctp_spot_static_data.vcxproj.filters  soptthosttraderapi_se.lib
docs/: docker.md  readme.md  simnow.md
docs - 副本/: openctp.md
docs/source/: conf.py  index.rst
docs/source/myotp/: docker.md  simnow.md
example/: README.md
ots-cta/: README.md
ots-dr/: README.md
ots-dr/cpp/: CMakeLists.txt
ots-dr/cpp/app/app_data_recorder_ctp_future/: CMakeLists.txt  app_data_recorder_ctp_future.cpp
ots-dr/cpp/app/app_static_data_ctp_future/: app_static_data_ctp_future.cpp
ots-dr/cpp/ots/utils/: encoding.h
ots-dr/python/: README.md  data_recorder.py  static_data.py
ots-ft/: README.md
ots-ft/cpp/: CMakeLists.txt  static_data.sqlite
ots-ft/cpp/app/app_quote_engine_ctp_future/: app_quote_engine_ctp_future.cpp
ots-ft/cpp/app/app_static_data_ctp_future/: app_static_data_ctp_future.cpp
ots-ft/cpp/include/ots/: data.h  define.h
ots-ft/cpp/include/ots/broker/: account.h  broker.h  contract.h  order.h  position.h
ots-ft/cpp/include/ots/ipc/disruptor/: disruptor.h
ots-ft/cpp/include/ots/risk/: risk.h
ots-ft/cpp/include/ots/utils/: create_folder.h  sql_utils.h  timing.h
ots-ft/cpp/ots/include/ots/data/: quote.h
ots-ft/cpp/ots/include/ots/ipc/disruptor/: ring.h
ots-ft/cpp/src/app_broker_engine/: CMakeLists.txt  app_broker_engine.cpp  broker.h  broker_ctp.cpp  broker_ctp.h  ctp_trade_api.cpp  ctp_trade_api.h  gateway.cpp  gateway.h
ots-ft/cpp/src/app_last_data/: CMakeLists.txt  app_last_data.cpp
ots-ft/cpp/src/app_quote_engine/: CMakeLists.txt  app_quote_engine.cpp  ctp_quote_api.cpp  ctp_quote_api.h
ots-ft/cpp/src/app_static_data/: CMakeLists.txt  app_static_data.cpp
ots-ft/pyscript/: main.py  print.cpp  spdlog_ctp.h  spdlog_ctp.py  spdlog_print.h  spdlog_print.py  spdlog_writer.h  spdlog_writer.py
ots-ft/python/: run_quote_engine.py  static_data.py
ots-ft/python/config/: config.py
ots-ft/python/core/: __init__.py
ots-ft/win32cpp/app_broker_engine/: app_broker_engine.sln  app_broker_engine.vcxproj  app_broker_engine.vcxproj.filters  broker_ctp.cpp  gateway.cpp  gateway.h
ots-ot/: README.md
tools/clickhouse-client/: CMakeLists.txt  docs.md  main.cpp  test.sql
tools/datetime/: CMakeLists.txt  kftime.cpp  kftime.h  main.cpp  nanotime.h
tools/disruptor/: CMakeLists.txt  atomic_disruptor.h  disruptor.h  main.cpp
tools/disruptor-ipc/: CMakeLists.txt  consumer.cpp  producer.cpp  remove_shm.cpp
tools/disruptor-ipc/disruptor/: ringbuffer.h  shm_manager.h  shm_ringbuffer.h  status.h  wait_strategy.h
tools/disruptor-ipc/mmap/: CMakeLists.txt  consumer.cpp  main.cpp  producer.cpp
tools/disruptor-ipc/mmap-win32/: CMakeLists.txt  consumer.cpp  main.cpp  producer.cpp
tools/disruptor-ipc/mmap-win32/disruptor/: disruptor.h  shm.h  wait_strategy.h
tools/disruptor-ipc/shm/: CMakeLists.txt  consumer.cpp  producer.cpp  remove_shm.cpp
tools/disruptor-ipc/shm/disruptor/: ipc.h  ringbuffer.h  shm.h  status.h  wait_strategy.h
tools/kungfu-yijinjing/: docs.md
tools/kungfu-yijinjing/server/: CMakeLists.txt  service.cpp
tools/kungfu-yijinjing/server/python/: test.py
tools/kungfu-yijinjing/server/yijinjing/include/yijinjing/journal/: Frame.hpp  IJournalVisitor.h  Journal.h  JournalHandler.h  JournalReader.h  JournalWriter.h  Page.h  PageCommStruct.h  PageProvider.h  PageSocketStruct.h  PageUtil.h  Timer.h
tools/kungfu-yijinjing/server/yijinjing/include/yijinjing/paged/: PageEngine.h  PageServiceTask.h  PageSocketHandler.h
tools/kungfu-yijinjing/server/yijinjing/journal/: Journal.cpp  JournalReader.cpp  Page.cpp  PageUtil.cpp  Timer.cpp
tools/kungfu-yijinjing/server/yijinjing/paged/: PageEngine.cpp  PageServiceTask.cpp  PageSocketHandler.cpp
tools/kungfu-yijinjing/server/yijinjing/server/: ClientPageProvider.cpp  LocalPageProvider.cpp
tools/logger/: CMakeLists.txt  main.cpp
tools/mmkv/: README.md
tools/mmkv/MMKV/: MMKV.sln  MMKV.vcxproj  MMKV.vcxproj.filters  MMKVPredef.h
(+101 files in other folders)
