#pybind11_add_module(app_broker_engine app_broker_engine.cpp)
aux_source_directory(. SOURCES)
add_executable(app_broker_engine ${SOURCES})

target_link_directories(app_broker_engine PUBLIC "${PROJECT_SOURCE_DIR}/deps/ctp_future")
target_link_libraries(app_broker_engine PUBLIC pthread)
target_link_libraries(app_broker_engine PUBLIC SQLiteCpp)
target_link_libraries(app_broker_engine PUBLIC sqlite3)

if (APPLE)
    target_link_libraries(app_broker_engine PUBLIC libthosttraderapi_se.dylib)
    target_link_libraries(app_broker_engine PUBLIC fmt::fmt)
elseif(UNIX)
    target_link_libraries(app_broker_engine PUBLIC libthosttraderapi_se.so)
    target_link_libraries(app_broker_engine PUBLIC spdlog::spdlog_header_only)
    target_link_libraries(app_broker_engine PUBLIC fmt::fmt-header-only)
endif ()

IF (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} --rtlib=compiler-rt")
ENDIF ()
