aux_source_directory(. QUOTE_ENGINE)
pybind11_add_module(app_quote_engine ${QUOTE_ENGINE})
target_link_directories(app_quote_engine PUBLIC "${PROJECT_SOURCE_DIR}/deps/ctp_future")
target_link_libraries(app_quote_engine PUBLIC pthread)

if (APPLE)
    target_link_libraries(app_quote_engine PUBLIC libthostmduserapi_se.dylib)
    target_link_libraries(app_quote_engine PUBLIC fmt::fmt)
elseif(UNIX)
    target_link_libraries(app_quote_engine PUBLIC libthostmduserapi_se.so)
    target_link_libraries(app_quote_engine PUBLIC fmt::fmt-header-only)
endif ()

IF (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} --rtlib=compiler-rt")
ENDIF ()